refactor[Cors]: fidCors